--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -109,7 +109,7 @@
         "import warnings\n",
         "warnings.filterwarnings(action='ignore', category=FutureWarning, module='numpy')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -125,7 +125,7 @@
         "df = pd.read_csv(DATA_PATH+'apartments/renthop-nyc.csv')\n",
         "assert df.shape == (49352, 34)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,7 +144,7 @@
         "        (df['latitude'] >=40.57) & (df['latitude'] < 40.99) &\n",
         "        (df['longitude'] >= -74.1) & (df['longitude'] <= -73.38)]"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -173,7 +173,7 @@
         "# Yes, it is!\n",
         "df.info()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,7 +238,7 @@
       "source": [
         "df['loft'].value_counts()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -275,7 +275,7 @@
         "df['price'].plot(kind='hist')\n",
         "plt.xlabel('Price ($)');"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -309,7 +309,7 @@
         "plt.xlabel('Longitude')\n",
         "plt.ylabel('Frequency');"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -354,7 +354,7 @@
         "y = df[target]\n",
         "X = df[['longitude']]\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -376,7 +376,7 @@
         "plt.ylabel('Price ($)')\n",
         "plt.show()"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -414,7 +414,7 @@
         "from sklearn.metrics import mean_absolute_error\n",
         "from sklearn.linear_model import LinearRegression"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -432,7 +432,7 @@
         "y_pred = [y.mean()] * len(y)\n",
         "print(\"First 10 items in the y_pred list: \\n\", y_pred[:10])"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -459,7 +459,7 @@
         "# What's our MAE before doing a regression?\n",
         "print(\"Baseline MAE (before regression): \", mean_absolute_error(y, y_pred))"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -483,7 +483,7 @@
         "# 1. Instatiate the model (find all of the instances)\n",
         "model = LinearRegression()"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -501,7 +501,7 @@
         "# 2. Fit the model to the data\n",
         "print(\"Fitting the model: \", model.fit(X, y))"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -528,7 +528,7 @@
         "y_pred2 = model.predict(X)\n",
         "y_pred2"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -563,7 +563,7 @@
         "\n",
         "print(\"Baseline MAE (after regression): \", mean_absolute_error(y, y_pred2))"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -593,7 +593,7 @@
         "plt.xlabel('Longitude')\n",
         "plt.ylabel('Price ($)');"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -634,7 +634,7 @@
       "source": [
         "print(f'RENT = {model.intercept_} + {model.coef_[0]} * Longitude')"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -683,7 +683,7 @@
         "\n",
         "df['bedrooms'] = df['bedrooms'].astype('float')"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -700,7 +700,7 @@
       "source": [
         "df['bedrooms'].dtypes"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -731,7 +731,7 @@
         "y = df[target]\n",
         "X = df[features]\n"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -752,7 +752,7 @@
         "# we apply TT-Splits to entire dataframes\n",
         "train, test = train_test_split(df)"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -769,7 +769,7 @@
         "X_test = test[features]\n",
         "y_test = test[target]"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -789,7 +789,7 @@
         "y_pred = [y.mean()] * len(y)\n",
         "print(y_pred)"
       ],
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -812,7 +812,7 @@
         "\n",
         "model = LinearRegression()"
       ],
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -830,7 +830,7 @@
         "# now let's fit the model \n",
         "model.fit(X_train, y_train)"
       ],
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -865,7 +865,7 @@
         "y_pred3 = model.predict(X_test)\n",
         "y_pred3"
       ],
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -900,7 +900,7 @@
         "\n",
         "r2_score(y_test, y_pred3)"
       ],
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -933,9 +933,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 593
+          "height": 428
         },
-        "outputId": "23ef478e-4de7-4d39-9039-1dac60c7c2a7"
+        "outputId": "a416a6bc-c732-4bda-fcca-e44ff6d884f3"
       },
       "source": [
         "# In order to plot on three dimensions, I'll need to define new variables for each feature I want to use\n",
@@ -951,20 +951,21 @@
         "ax.scatter3D(x, y, z, color='blue')\n",
         "plt.xlabel('Number of bedrooms', fontweight=\"bold\")\n",
         "plt.ylabel('Number of bathrooms', fontweight='bold')\n",
-        "zlabel('Price')"
+        "# zlabel('Price')"
       ],
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-107-aceac3ae1f50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxlabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Number of bedrooms'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfontweight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"bold\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mylabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Number of bathrooms'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfontweight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'bold'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mzlabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Price'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'zlabel' is not defined"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Text(0.5, 0, 'Number of bathrooms')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 108
         },
         {
           "output_type": "display_data",
@@ -995,7 +996,7 @@
       "source": [
         "plt.scatter3D(x, y, z, color)"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1048,7 +1049,7 @@
         "# rename the x-ticks so that they're intelligable to others\n",
         "plt.x_ticklabels('')"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
