--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -699,6 +699,115 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mwzWIg9D9qS2",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Do linear regression with two or more features."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rRlg8APY9sUk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# initiate class\n",
+        "model1 = LinearRegression()"
+      ],
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cTQxr0Tv-SbF",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# arrange x_features matrix and y_target vector\n",
+        "features1 = ['bedrooms', 'bathrooms', 'terrace']\n",
+        "target1 = ['price']\n",
+        "\n",
+        "x_train1 = df[features1]\n",
+        "y_train1 = df[target1]"
+      ],
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2VkNbp9V-fCB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "43e6b199-6f9a-4bd4-e7e3-16908598bec2"
+      },
+      "source": [
+        "# fit model \n",
+        "model.fit(x_train1, y_train1)"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ApwyHa07-g11",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3842a3ee-0a45-4274-fcae-74c1ff80e201"
+      },
+      "source": [
+        "# make predictions\n",
+        "bedrooms = 4\n",
+        "bathrooms = 2\n",
+        "terrace = 1\n",
+        "\n",
+        "y_pred = model.predict([[bedrooms, bathrooms, terrace]])\n",
+        "y_pred"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[6533.78787684]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
     }
   ]
 }
