--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -2511,7 +2511,7 @@
         "colab_type": "text"
       },
       "source": [
-        "###MAE for baseline with 0 features"
+        "###MAE for mean baseline with 0 features"
       ]
     },
     {
@@ -3114,15 +3114,227 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PdZIqf8JNKBq",
+        "id": "ymP2GgkrUx61",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score"
       ],
-      "execution_count": null,
+      "execution_count": 175,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "E-fapNaLVa69",
+        "colab_type": "text"
+      },
+      "source": [
+        "###RMSE and R2 for training data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4jD2afheUdgf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e9c2bbfe-e9ea-42aa-80ee-3890a1255278"
+      },
+      "source": [
+        "#mean squared error for train\n",
+        "y_pred = model.predict(X_train)\n",
+        "mse = mean_squared_error(y_train, y_pred)\n",
+        "mse"
+      ],
+      "execution_count": 184,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1456270.539984902"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 184
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PdZIqf8JNKBq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "12bd2dcb-d8b3-444b-b35a-435a1586477d"
+      },
+      "source": [
+        "#rmse \n",
+        "np.sqrt(mse)"
+      ],
+      "execution_count": 185,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1206.7603490274703"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 185
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eZsNsdvMVqbO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "64a334e2-b44d-413d-faac-0e1d21d2ff5c"
+      },
+      "source": [
+        "#r2\n",
+        "r2 = r2_score(y_train, y_pred)\n",
+        "r2"
+      ],
+      "execution_count": 187,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5309960368173665"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 187
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7KzBiZuLViXY",
+        "colab_type": "text"
+      },
+      "source": [
+        "###RMSE and R2 for testing data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1N6XGZT1U5WY",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "5d1f8f2c-c983-48b4-b5c1-c3d3b45b7260"
+      },
+      "source": [
+        "#mean squared error for test\n",
+        "y_pred = model.predict(X_test)\n",
+        "mse = mean_squared_error(y_test, y_pred)\n",
+        "mse"
+      ],
+      "execution_count": 188,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1425040.9090226043"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 188
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CaXVwLydVFNj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a98cd2f4-0f50-49fb-9e4d-51397a8e4ad2"
+      },
+      "source": [
+        "#rmse\n",
+        "np.sqrt(mse)"
+      ],
+      "execution_count": 189,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1193.7507734123585"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 189
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-si5s7K2VXed",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d279a897-a944-4dfe-ed29-7ef94a5d05fc"
+      },
+      "source": [
+        "#r2\n",
+        "r2 = r2_score(y_test, y_pred)\n",
+        "r2"
+      ],
+      "execution_count": 190,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.541495766530834"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 190
+        }
+      ]
     }
   ]
 }
