Clogestic  Regression Assignment 4

--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -1815,6 +1815,34 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NGVzQ76nBb2y",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0e0bd17b-4f32-4fbb-8b75-eb9483d7a7c6"
+      },
+      "source": [
+        "#the mode is the most frequent value which is the majority class\n",
+        "majority_class = y_train.mode()\n",
+        "y_pred = [majority_class] * len(y_train)\n",
+        "print(len(y_train))"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "298\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "VU9FungotohC",
@@ -1892,7 +1920,7 @@
         "colab": {}
       },
       "source": [
-        "\n",
+        "#this is changing categorical variables to numerical\n",
         "encoder = ce.OneHotEncoder(use_cat_names=True)\n",
         "X_train_encoded = encoder.fit_transform(X_train)\n",
         "X_val_encoded = encoder.transform(X_val)\n",
@@ -2443,6 +2471,7 @@
         "outputId": "8670fc86-da82-4a0f-93f8-993055415dc2"
       },
       "source": [
+        "#this is fitting validation dataset\n",
         "model = LogisticRegressionCV(cv=5, n_jobs=-1, random_state=42)\n",
         "model.fit(X_train_scaled, y_train)\n",
         "print('Validation Accuracy', model.score(X_val_scaled, y_val))"
@@ -2492,7 +2521,7 @@
         "colab": {}
       },
       "source": [
-        "\n",
+        "#this is changing categorical variables to numerical\n",
         "encoder = ce.OneHotEncoder(use_cat_names=True)\n",
         "X_train_encoded = encoder.fit_transform(X_train)\n",
         "X_val_encoded = encoder.transform(X_val)\n",
@@ -2509,7 +2538,7 @@
         "colab": {}
       },
       "source": [
-        "\n",
+        "#This is filling missing data\n",
         "imputer = SimpleImputer()\n",
         "X_train_imputed= imputer.fit_transform(X_train_encoded)\n",
         "X_val_imputed = imputer.transform(X_val_encoded)\n",
@@ -2526,7 +2555,7 @@
         "colab": {}
       },
       "source": [
-        "\n",
+        "#this scalling the training dataset every feature to standardize/mean=0 & Stdev=1/\n",
         "scaler = StandardScaler()\n",
         "X_train_scaled = scaler.fit_transform(X_train_imputed)\n",
         "X_val_scaled = scaler.transform(X_val_imputed)\n",
@@ -2547,7 +2576,7 @@
         "outputId": "615e34e8-5291-4e24-9e8c-95c979fdea22"
       },
       "source": [
-        "\n",
+        "#making validation scaled dataset\n",
         "model = LogisticRegressionCV(cv=5, n_jobs=-1, random_state=42)\n",
         "model.fit(X_train_scaled, y_train)\n",
         "print('Validation Accuracy', model.score(X_val_scaled, y_val))"
@@ -2571,7 +2600,7 @@
         "colab": {}
       },
       "source": [
-        "\n",
+        "#arranging the dataset again\n",
         "target = 'Great'\n",
         "features = ['Burrito', 'Yelp', 'Google', \n",
         "            'Cost', 'Hunger','Mass (g)', \n",
@@ -2598,7 +2627,7 @@
         "colab": {}
       },
       "source": [
-        "\n",
+        "#chainging categorical features\n",
         "encoder = ce.OneHotEncoder(use_cat_names=True)\n",
         "X_train_encoded = encoder.fit_transform(X_train)\n",
         "X_val_encoded = encoder.transform(X_val)\n",
@@ -2615,7 +2644,7 @@
         "colab": {}
       },
       "source": [
-        "\n",
+        "#imputing missing data\n",
         "imputer = SimpleImputer()\n",
         "X_train_imputed= imputer.fit_transform(X_train_encoded)\n",
         "X_val_imputed = imputer.transform(X_val_encoded)\n",
@@ -2632,7 +2661,7 @@
         "colab": {}
       },
       "source": [
-        "\n",
+        "#feature scalling\n",
         "scaler = StandardScaler()\n",
         "X_train_scaled = scaler.fit_transform(X_train_imputed)\n",
         "X_val_scaled = scaler.transform(X_val_imputed)\n",
@@ -2653,7 +2682,7 @@
         "outputId": "be6a7821-95ca-4e45-8a21-f417227ad7f4"
       },
       "source": [
-        "\n",
+        "#making validation scaled dataset\n",
         "model = LogisticRegressionCV(cv=5, n_jobs=-1, random_state=42)\n",
         "model.fit(X_train_scaled, y_train)\n",
         "print('Validation Accuracy', model.score(X_val_scaled, y_val))"
@@ -2681,7 +2710,7 @@
         "outputId": "3e4d9f40-df0d-42ad-a1c1-2673a323d449"
       },
       "source": [
-        "\n",
+        "#predicting accuracy for testing data\n",
         "print('Test Accuracy', model.score(X_test_scaled, y_test))"
       ],
       "execution_count": null,
@@ -2707,6 +2736,7 @@
         "outputId": "ce442ebc-67b8-4370-df4f-5c5055f2d105"
       },
       "source": [
+        "#predicting accuracy for scaled testing data\n",
         "y_pred = model.predict(X_test_scaled)\n",
         "print(f'Test Accuracy Score: {model.score(X_test_scaled, y_pred)}')"
       ],
